# shore_swig_bindings

./: LICENSE  Readme.md
android/: CMakeLists.txt  Readme.md
android/aar/: AndroidManifest.xml
android/aar/res/values/: values.xml
android/jni/: Android.mk.in  Application.mk.in
cmake_common/: embed.cmake
docker/: Dockerfile
java/: CMakeLists.txt  IMessageCallback.java  IModelQueryCallback.java  MANIFEST.MF  Readme.md  Shore.i  ShoreCmdline.java  filelist.cmake
perl/: CMakeLists.txt  Readme.md  Shore.i  Shore.pl
